--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,16 @@
 html,
-body {
+body, #__next {
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+#__next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
@@ -13,6 +20,7 @@ a {
 
 * {
   box-sizing: border-box;
+  position: relative;
 }
 
 @media (prefers-color-scheme: dark) {
