--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -18,6 +18,7 @@
     font-family: "JetBrains Mono", sans-serif;
     font-size: 1.6rem;
     margin-right: auto;
+    color: inherit;
   }
   :first-child::after {
     content: "";
@@ -31,8 +32,8 @@
     margin-left: auto;
   }
   @media (prefers-color-scheme: light) {
-    :last-child {
-      color: rgb(180, 180, 180);
+    :first-child {
+      color: #181818;
     }
   }
 }
